--- a/management-report/markdown/subpage-pathways.Rmd
+++ b/management-report/markdown/subpage-pathways.Rmd
@@ -183,12 +183,13 @@ uptake_data <- read_rds(get_mi_data_path("uptake_data", ext = "rds", test_output
  
 ```
 
-Sidebar {.sidebar}
+Sidebar - waiting times {.sidebar}
 -----------------------------------------------------------------------
 
 <br>
 
 ### Pathways - Waiting Times
+
 ***
 
 <font size="2"> 
@@ -207,11 +208,12 @@ Sidebar {.sidebar}
 </ul>
 
 ***
-FURTHER INFORMATION:
+
+**FURTHER INFORMATION:**
 
 <ul style="list-style-type:square;">
    <li >[Glossary](#glossary)</li>
-   <li >[User Guide](#user-guide)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
 </ul>
 
 ***
@@ -223,11 +225,11 @@ Row
 
 ### **Note**
 
-This page shows pathways from dementia diagnosis to first contact by PDS practitioner. The Integration Authority Areas and Health Boards tabs include a chart and table showing the median number of days between diagnosis and contact for each geographical area by financial year. Use the dropdown menus to select a year to show in the charts and tables.
+This page shows pathways from dementia diagnosis to first contact by PDS practitioner. The Integration Authority Areas and Health Boards tabs include a chart and table showing the median number of days between diagnosis and contact for each geographical area by financial year.
 
-The Trend tab includes a chart and table showing the trend of the median days between diagnosis and contact by financial year for Scotland, Integration Authority Areas and Health Boards. Use the dropdown menu to select multiple geographies to show in the chart. 
+The Trend tab includes a chart and table showing the trend of the median days between diagnosis and contact by financial year for Scotland, Integration Authority Areas and Health Boards.
 
-The Waiting Times Breakdown tab includes a table showing the number of referrals, percentage of referrals allocated and contacted by PDS practitioner, and the median number of days between each pathway. Use the dropdown menu to select a year to show in the table. 
+The Waiting Times Breakdown tab includes a table showing the number of referrals, percentage of referrals allocated and contacted by PDS practitioner, and the median number of days between each pathway. 
 
 *The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
@@ -547,7 +549,8 @@ data_filter_all_year, NULL)
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: -20px"> Pathways from diagnosis to first contact by PDS practitioner </h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: 0px"> Pathways from diagnosis to first contact by PDS practitioner </h2>
+<h4 style="margin-left: 60px; margin-top: 0px; margin-bottom: -10px; font-style: italic">Please note that waiting times for referral and allocation may be reflective of differences in the set up of local services</h4>
 ```{r wait-table-all}
 bscols(widths = 12,
        div(style = css(width="97%", height="785px", margin="20px"),
@@ -594,12 +597,13 @@ return(data)
 
 ```
 
-Sidebar {.sidebar}
+Sidebar - outcomes{.sidebar}
 -----------------------------------------------------------------------
 
 <br>
 
 ### Pathways - PDS Outcomes
+
 ***
 
 <font size="2"> 
@@ -618,12 +622,13 @@ Sidebar {.sidebar}
 </ul>
 
 ***
-FURTHER INFORMATION:
+
+**FURTHER INFORMATION:**
 
 <ul style="list-style-type:square;">
    <li >[Methodology](#methodology)</li>
    <li >[Glossary](#glossary)</li>
-   <li >[User Guide](#user-guide)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
 </ul>
 
 ***
@@ -635,15 +640,13 @@ Row
 
 ### **Note**
 
-This page includes further information for referrals in regards to the LDP Standard.
+This page includes further information for referrals relating to the LDP Standard.
 
-The LDP Standard Not Met tab includes a table showing the number of individuals and percentage of total referrals who did not receive a minimum of one year’s PDS starting within 12 months of diagnosis, along with the percentage for each reason for not meeting the LDP Standard for Scotland, Integration Authority Areas and Health Boards by financial year.
+The LDP Standard Not Met tab includes a table showing the percentage of total referrals and number of individuals who did not receive a minimum of one year’s PDS starting within 12 months of diagnosis, along with the percentage for each reason for not meeting the LDP Standard for Scotland, Integration Authority Areas and Health Boards by financial year.
 
-The PDS Ongoing tab includes a table showing the number of individuals and percentage of total referrals where the LDP standard cannot yet be determined, along with the percentage of individuals who had not started within 12 months and individuals still receiving PDS within 12 months of their diagnosis for Scotland, Integration Authority Areas and Health Boards by financial year for years that are not yet finalised.
+The PDS Ongoing tab includes a table showing the percentage of total referrals and number of individuals where the LDP Standard cannot yet be determined, along with the percentage of individuals where PDS has not yet started and less than 12 months since diagnosis and percentage of individuals still receiving PDS and less than 12 months since first contact for Scotland, Integration Authority Areas and Health Boards by financial year for years that are not yet finalised.
 
-The Exempt tab includes a table showing the number of individuals and percentage of total referrals who are exempt from the LDP standard for Scotland, Integration Authority Areas and Health Boards by financial year.
-
-Use the dropdown menus to select a year to show in the tables.
+The Exempt tab includes a table showing the percentage of total referrals and number of individuals who are exempt from the LDP Standard for Scotland, Integration Authority Areas and Health Boards by financial year.
 
 *As PDS for some referrals in `r provisional_year` onwards is still ongoing, it is not known yet whether or not they will meet the LDP standard. Therefore, the figures shown for these years are currently provisional and subject to change in future versions of this report.*
 
@@ -688,7 +691,7 @@ not_met_table_data <- SharedData$new(not_met_data_totals)
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: -10px">Individuals who did not receive a minimum of one year’s PDS (Standard Not Met)</h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: -10px">Individuals who did not receive a minimum of one year’s PDS (Standard Not Met)</h2>
 ```{r not-met-table}
 
 
@@ -773,7 +776,7 @@ ongoing_table_data <- SharedData$new(ongoing_data_totals)
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: -10px">Individuals where LDP Standard cannot yet be determined (PDS Ongoing)</h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: -10px">Individuals where LDP Standard cannot yet be determined (PDS Ongoing)</h2>
 ```{r ongoing-table}
 
 headers_ongoing <- htmltools::withTags(table(
@@ -853,7 +856,7 @@ exempt_table_data <- SharedData$new(exempt_data_totals)
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: -20px">Individuals exempt from LDP Standard</h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: -20px">Individuals exempt from LDP Standard</h2>
 ```{r exempt-table}
 
 bscols(widths = 12,
@@ -883,7 +886,7 @@ bscols(widths = 12,
 Uptake{.hidden}
 =====================================
 
-Sidebar {.sidebar}
+Sidebar - uptake{.sidebar}
 -----------------------------------------------------------------------
 
 <br>
@@ -908,11 +911,11 @@ Sidebar {.sidebar}
 
 ***
 
-FURTHER INFORMATION:
+**FURTHER INFORMATION:**
 
 <ul style="list-style-type:square;">
    <li >[Glossary](#glossary)</li>
-   <li >[User Guide](#user-guide)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
 </ul>
 
 ***
@@ -924,7 +927,7 @@ Row
 
 ### **Note**
 
-This page includes a table showing the percentage of total referrals where 'PDS uptake decision' has been recorded along with the percentage which have been recorded as 'Accepted' or 'Accepted but initially declined' for Integration Authority Areas and Health Boards with comparison to Scotland for each financial year. Use the dropdown menu to select a year to show in the table.
+This page includes a table showing the percentage of total referrals where 'PDS uptake decision' has been recorded along with the percentage which have been recorded as 'Accepted' or 'Accepted but initially declined' for Integration Authority Areas and Health Boards with comparison to Scotland for each financial year. 
 
 *The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
@@ -982,7 +985,7 @@ bscols(widths = c(1,5,NA),
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision; Integration Authority Areas</h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision; Integration Authority Areas</h2>
 ```{r table-uptake-ijb}
 
 
@@ -1068,7 +1071,7 @@ bscols(widths = c(1,5,NA),
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision; Health Boards</h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: 0px"> Referrals by PDS Uptake Decision; Health Boards</h2>
 ```{r table-uptake-hb}
 
 bscols(widths = 12,
@@ -1091,7 +1094,7 @@ bscols(widths = 12,
 
 No Contact {.hidden}
 =================================================
-Sidebar {.sidebar}
+Sidebar - no contact{.sidebar}
 -----------------------------------------------------------------------
 
 <br>
@@ -1115,11 +1118,12 @@ Sidebar {.sidebar}
 </ul>
 
 ***
-FURTHER INFORMATION:
+
+**FURTHER INFORMATION:**
 
 <ul style="list-style-type:square;">
    <li >[Glossary](#glossary)</li>
-   <li >[User Guide](#user-guide)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
 </ul>
 
 ***
@@ -1130,7 +1134,7 @@ Row
 
 ### **Note**
 
-This page includes a table showing the number of individuals and percentage of total referrals with no contact by PDS practitioner within 12 months of contact, along with the number and percentage of total referrals whose PDS was ended with no contact for Integration Authority Areas and Health Boards with comparison to Scotland for each financial year. Use the dropdown menu to select a year to show in the table.
+This page includes a table showing the number of individuals and percentage of total referrals with no contact from a PDS practitioner within 12 months of diagnosis, along with the number and percentage of total referrals whose PDS was ended with no contact for Integration Authority Areas and Health Boards with comparison to Scotland for each financial year.
 
 *The figures shown for `r provisional_year` onwards are currently provisional and subject to change in future versions of this report.*
 
@@ -1197,7 +1201,7 @@ data_filter_year_no_contact_ijb, NULL)
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: -20px">Individuals referred to PDS not contacted within 12 months of diagnosis; Integration Authority Areas</h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: -20px">Individuals referred to PDS not contacted within 12 months of diagnosis; Integration Authority Areas</h2>
 ```{r no-contact-table-ijb}
 
 bscols(widths = 12,
@@ -1274,7 +1278,7 @@ data_filter_year_no_contact_hb, NULL)
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: -20px">Individuals referred to PDS not contacted within 12 months of diagnosis; Health Boards</h2>
+<h2 style="margin-left: 30px; margin-top: 0px; margin-bottom: -20px">Individuals referred to PDS not contacted within 12 months of diagnosis; Health Boards</h2>
 ```{r no-contact-table-hb}
 bscols(widths = 12,
        div(style = css(width="97%", height="500px", margin="20px"),
