--- a/management-report/markdown/subpage-trends.Rmd
+++ b/management-report/markdown/subpage-trends.Rmd
@@ -173,7 +173,7 @@ pds_hb_rates <- pds_all_rates %>% filter(geog != "Scotland", grepl("NHS", geog))
 
 All Referrals - Trends & Rates
 =================================================
-Sidebar {.sidebar}
+Sidebar - trend {.sidebar}
 -----------------------------------------------------------------------
 
 <br>
@@ -196,11 +196,11 @@ Sidebar {.sidebar}
 </ul>
 
 ***
-FURTHER INFORMATION:
+**FURTHER INFORMATION:**
 
 <ul style="list-style-type:square;">
    <li >[Glossary](#glossary)</li>
-   <li >[User Guide](#user-guide)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
 </ul>
 
 ***
@@ -213,7 +213,7 @@ Row
 
 ### **Note**
 
-This page includes a chart and table showing the trend for number of people referred to PDS by financial year for Scotland, Integration Authority Areas and Health Boards. For the Integration Authority Areas and Health Boards tabs use the dropdown menus to select multiple geographies to show in the charts.  
+This page includes a chart and table showing the trend for number of people referred to PDS by financial year for Scotland, Integration Authority Areas and Health Boards. 
 
 `r if(qt != 4) {div(style = css(fontStyle="italic"),paste0("For diagnoses in financial year ", current_fy, " data is available up to and including Q", qt, "."))}`
 
@@ -350,7 +350,7 @@ pds_all_totals %>% filter(geog == "Scotland" | grepl("NHS", geog)) %>%
 
 Pop Rates {.hidden}
 =====================================
-Sidebar {.sidebar}
+Sidebar - rates {.sidebar}
 -----------------------------------------------------------------------
 
 <br>
@@ -373,11 +373,11 @@ Sidebar {.sidebar}
 </ul>
 
 ***
-FURTHER INFORMATION:
+**FURTHER INFORMATION:**
 
 <ul style="list-style-type:square;">
    <li >[Glossary](#glossary)</li>
-   <li >[User Guide](#user-guide)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
 </ul>
 
 ***
@@ -390,9 +390,9 @@ Row
 
 ### **Note**
 
-This page includes rates of the number of people referred to PDS per 10,000 population (65 years and over). The Integration Authority Area and Health Board tabs include a chart and table showing the rate for each geographical area by financial year. Use the dropdown menus to select a year to show in the charts. 
+This page includes rates of the number of people referred to PDS per 10,000 population (65 years and over). The Integration Authority Area and Health Board tabs include a chart and table showing the rate for each geographical area by financial year.
 
-The Trend tab includes a chart and table showing the trend of the rate by financial year for Scotland, Integration Authority Areas and Health Boards. Use the dropdown menu to select multiple geographies to show in the chart. 
+The Trend tab includes a chart and table showing the trend of the rate by financial year for Scotland, Integration Authority Areas and Health Boards.
 
 *The rate per 10,000 population is calculated using the number of referrals with a dementia diagnosis date in the given financial year and the estimated population of the same year for each geographical area. See the [Glossary](#glossary) page for more details.*
 
@@ -547,7 +547,7 @@ pds_all_rates %>%
 
 Trend Outcomes {.hidden}
 =====================================
-Sidebar {.sidebar}
+Sidebar - outcomes {.sidebar}
 -----------------------------------------------------------------------
 
 <br>
@@ -570,12 +570,12 @@ Sidebar {.sidebar}
 </ul>
 
 ***
-FURTHER INFORMATION:
+**FURTHER INFORMATION:**
 
 <ul style="list-style-type:square;">
    <li >[Methodology](#methodology)</li>
    <li >[Glossary](#glossary)</li>
-   <li >[User Guide](#user-guide)</li>
+   <li >[Navigation Guide](#navigation-guide)</li>
 </ul>
 
 
@@ -589,11 +589,9 @@ Row
 
 ### **Note**
 
-This page includes charts and tables showing the trend by financial year for information in regards to the LDP Standard. The first tab shows the percentage of the estimated number of people newly diagnosed with dementia that have been referred to PDS for Scotland and Health Boards (estimates are not available for Integration Authority Areas).
+This page includes charts and tables showing the trend by financial year for information relating to the LDP Standard. The first tab shows the percentage of the estimated number of people newly diagnosed with dementia that have been referred to PDS for Scotland and Health Boards (estimates are not available for Integration Authority Areas).
 
 The second tab shows the percentage of referrals that have received one year's support which started within a year of diagnosis (or have been exempt from the LDP Standard) for Scotland, Integration Authority Areas and Health Boards. 
-
-Use the dropdown menus to select multiple geographies to show in the charts.
 
 *As PDS for some referrals in `r provisional_year` onwards is still ongoing, it is not known yet whether or not they will meet the LDP standard. Therefore, the figures shown for these years are currently provisional and subject to change in future versions of this report.*
 
